# Zip

./: Cargo.toml
pulsar-ui/src/: index.html
pulsar-ui/src-tauri/: Cargo.toml  tauri.conf.json
pulsar-ui/src-tauri/src/: main.rs
src/: browser.js  css.rs  dom.rs  html.rs  index.html  layout.rs  lib.rs  network.rs  renderer.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
test/: Cargo.toml
test/src/: main.rs
